finished layout of footer

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -2,8 +2,12 @@
 @import "./common/fonts.scss"
 @import "./common/_nullstyle.scss"
 
+// html,
+// body
+// 	overflow-x: hidden
 
 body
+	min-width: 320px
 	font-family: $font-primary
 	font-weight: normal
 	font-style: normal
@@ -23,7 +27,7 @@ button
 .wrapper
 	max-width: $siteWidth
 	width: 100%
-	margin: -86px auto 0 auto
+	margin: 0 auto
 	flex: 1 1 auto
 
 .container
