--- a/src/styles/common/_adaptive.sass
+++ b/src/styles/common/_adaptive.sass
@@ -30,6 +30,7 @@
             padding: 100px 40px
             margin: 0
             transition: all 0.5s ease 0s
+            z-index: 49
         &__body._active
             left: 0
         &__list
@@ -40,7 +41,7 @@
         &__item
             padding: 10px
         &__icon
-            z-index: 5
+            z-index: 50
             display: block
             position: relative
             width: 30px
@@ -49,6 +50,7 @@
             cursor: pointer
             transition: all 0.5s ease 0s
             margin-left: auto
+
             & span,
             &::before,
             &::after
@@ -80,24 +82,59 @@
                 transform: rotate(45deg) translate(0, 50%)
 
     // .footer
-    .subscribe
-        margin: 70px 0
-        &__form
-            flex-direction: column
-            align-items: flex-start
-        &__block
-            flex: auto
-            width: 100%
-            margin: 15px 0 0 0
-    .footer
-        &__news-promo
+    .footer-top
+        .subscribe
+            margin: 70px 0
+            &__form
+                flex-direction: column
+                align-items: flex-start
+            &__block
+                flex: auto
+                width: 100%
+                margin: 15px 0 0 0
+    .footer-top
+        .news-promo
             margin-bottom: 70px
+        
+        .our-insta
+            &__block
+                flex: 0 0 350px
+            &__link-btn
+                margin: 25px 0 0 0
+    
+    .footer-bottom
+        &__link,
+        &__span
+            font-size: $text-font-size-fablet
+        .socials-box
+            &__title
+                font-size: $text-font-size-fablet
+        &__input
+            font-size: $text-font-size-fablet
+            &:placeholder
+                font-size: $text-font-size-fablet
+        &__row
+            flex-wrap: wrap
+            gap: 30px
 
 @media screen and (max-width: 768px)
     .swiper-container-horizontal>.swiper-pagination-fraction
         max-width: 75%
 
+    .footer-top
+        .our-insta
+            &__title
+                font-size: 28px
+                margin: 0
+            &__text
+                font-size: $text-font-size-fablet
+                margin: 10px 0 0 0
+            &__link-btn
+                margin: 15px 0 0 0
+
 @media screen and (max-width: 640px)
+    .container
+        padding: $content-padding-mob
     .section
         &__title
             font-size: $section-title-mobile
@@ -117,13 +154,32 @@
     .swiper-button-prev
         right: 40px
 
-@media screen and (max-width: 425px)
-    .subscribe
-        &__input-block
+    .footer-top
+        .slider1
+            &__text
+                font-size: $text-font-size-fablet
+        .our-insta
+            &__content
+                flex-direction: column
+            &__block
+                flex: auto
+                width: 100%
+                margin-bottom: 15px
+            &__link-btn
+                max-width: 100%
+
+
+    .footer-bottom
+        &__row
             flex-direction: column
-        &__input
-            max-width: unset
-        &__btn
-            max-width: unset
-            width: 100%
-            margin: 10px auto
+@media screen and (max-width: 425px)
+    .footer-top
+        .subscribe
+            &__input-block
+                flex-direction: column
+            &__input
+                max-width: unset
+            &__btn
+                max-width: unset
+                width: 100%
+                margin: 10px auto
