--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -1,15 +1,17 @@
 // Размеры
 $siteWidth: 1920px
-$content-max-width: 1440px
-$content-padding: 0 20px
+$content-max-width: 1480px
+$content-padding: 0 40px
 $content-max-width-tablet: 1024px
-$content-padding-tablet: 0 15px
+$content-padding-tablet: 0 20px
 $content-max-width-mob: 768px
-$content-padding-mob: 0 10px
+$content-padding-mob: 0 15px
 
 // Шрифт
 $font-primary: "Helvetica", sans-serif
 $text-font-size-desktop: 16px
+$text-font-size-fablet: 15px
+$text-font-size-mobile: 14px
 $big-title-size: 144px
 $middle-title-size: 64px
 $section-title-desktop: 24px
@@ -22,4 +24,6 @@ $color-Black: #000000
 $color-black_2: #292929
 $color-White: #ffffff
 $color-placeholder: #DDDDDD
+$color-Gray_1: #7A7A7A
+
 
