--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -27,4 +27,4 @@ header.header
 		.header__logo-box 
 			a.header__logo-link(href="#")
 				svg.header__logo-img(width="150" height="46")  
-					use(xlink:href="./assets/images/sprite.svg#logo-white" alt="logo")
+					use(xlink:href="./assets/images/sprite.svg#logo-white" alt="Champler logo")
